# RasterEditor

./: ApplicationWindow.cpp  ApplicationWindow.hpp  CMakeLists.txt  README.md  Widget.cpp  Widget.hpp  main.cpp  resources.qrc
Core/Managers/: UndoRedoManager.cpp  UndoRedoManager.hpp  WorkspaceActionManager.cpp  WorkspaceActionManager.hpp  WorkspaceManager.cpp  WorkspaceManager.hpp
Core/Painting/: BrushAction.cpp  BrushAction.hpp  EraserAction.cpp  EraserAction.hpp  IPaintingAction.hpp  PaintingActionBase.cpp  PaintingActionBase.hpp  PaintingToolFactory.hpp  PaintingToolPreviewWidgets.hpp  PaintingToolRegisty.hpp  PaintingToolType.hpp  PenAction.cpp  PenAction.hpp
Core/Utilities/: Compression.hpp  General.hpp
Utilities/: Resources.hpp
Visuals/: ApplicationWindow.cpp  ApplicationWindow.hpp  CentralWidget.cpp  CentralWidget.hpp  PaintingToolBar.cpp  PaintingToolBar.hpp  PaintingWidget.cpp  PaintingWidget.hpp  Widget.cpp  Widget.hpp
Visuals/Basics/: VerticalBoxLayout.hpp
Visuals/Custom/: EditorTabBar.hpp
Visuals/Utilities/: PaintingToolIconFactory.hpp
resources/styles/: General.qss
